# ssh_mgr

./: Makefile.am  autogen.sh  configure.in
docs/: escapes.txt  r_vt200.txt
src/: Makefile.am  client.c  client.h  exp_array.c  exp_array.h  io.c  io.h  main.c  screen_buffer.c  screen_buffer.h  screen_buffer_private.c  screen_buffer_private.h  session.c  session.h
src/php/: index.php
tests/: cmdline.sh  cmdline.sh.new  programs.txt
tests/irssi-scrolling/: cmdline.sh  irssi-screen-screen1.esc  irssi-screen-screen2.esc
tests/nano/: nano-delete-single-char-screen1.esc  nano-delete-single-char-screen2.esc  nano-enter-key-screen3.esc  nano-enter-key-screen4.esc
tests/ntsysv-scrolling/: cmdline.sh  ntsysv-screen1.esc  ntsysv-screen2.esc
