dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(ssh_mgr, 0.0.3)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_CANONICAL_HOST
AC_PROG_CC
AM_PROG_CC_STDC
AM_PROG_CC_C_O
AC_HEADER_STDC

dnl AC_ARG_WITH(
dnl   svgpix, 
dnl   [  --with-svgpix[[=ARG]]     use SVG icons ARG=[[detect]]|yes|no ], 
dnl   [ svgpix=$withval ],
dnl   [ svgpix=detect ])
dnl 
dnl if test -z "$PKG_CONFIG"; then
dnl   AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
dnl fi
dnl 
dnl if test "$svgpix" = "detect"; then
dnl   AC_MSG_CHECKING(for librsvg)
dnl   if $PKG_CONFIG --modversion librsvg-2.0 > /dev/null 2>&1; then
dnl     AC_MSG_RESULT(yes)
dnl     AC_DEFINE(HAVE_LIBRSVG)
dnl     svgpix=yes
dnl   else
dnl     AC_MSG_RESULT(no)
dnl     svgpix=no
dnl   fi
dnl elif test "$svgpix" = "yes"; then
dnl   AC_DEFINE(HAVE_LIBRSVG)
dnl fi

pkg_modules="glib-2.0 >= 2.0.0"
PKG_CHECK_MODULES(GLIB, [$pkg_modules])

pkg_modules="gthread-2.0 >= 2.0.0"
PKG_CHECK_MODULES(GTHREAD, [$pkg_modules])

if echo "$build" | grep "solaris" > /dev/null; then
  AC_MSG_CHECKING(for Sun WorkShop compiler)
  if ${CC} -V 2>&1 | grep 'Sun WorkShop' > /dev/null; then
    GTHREAD_CFLAGS=`echo ${GTHREAD_CFLAGS} | sed 's/-threads//g'`
    GTHREAD_LIBS=`echo ${GTHREAD_LIBS} | sed 's/-threads//g'`
    AC_MSG_RESULT(yes)
  else
    AC_MSG_RESULT(no)
  fi
fi

AC_SUBST(GTHREAD_CFLAGS)
AC_SUBST(GTHREAD_LIBS)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

dnl GETTEXT_PACKAGE=ssh_mgr
dnl AC_SUBST(GETTEXT_PACKAGE)
dnl AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

dnl Set PACKAGE_SOURCE_DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`
if echo $build | grep -q cygwin ; then
  if test -x /usr/bin/cygpath ; then
    packagesrcdir=`cygpath -dm ${packagesrcdir}`
    prefix=`cygpath -dm ${prefix}`
  fi
fi
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}", PACKAGE_SOURCE_DIR)

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Werror -Wall" ;;
  esac
fi
changequote([,])dnl

dnl dnl Add the languages which your application supports here.
dnl ALL_LINGUAS="de hu ro fr pl it"
dnl AM_GLIB_GNU_GETTEXT

dnl if test "$svgpix" = "yes"; then
dnl   ICON_EXT=".svg"
dnl else
dnl   ICON_EXT="_0_48x48x24a.png"
dnl fi

AC_SUBST(VERSION)
AC_SUBST(prefix)
dnl AC_SUBST(ICON_EXT)
AC_SUBST(packagesrcdir)

dnl GTK_DOC_CHECK(1.4)

AC_OUTPUT([
Makefile
src/Makefile
])
